# sudoku

./: .gitmodules  CMakeLists.txt  FILE_ID.DIZ  LICENSE  README  README.LINUX  main.c  sudoku.ans  suscore.ans
